# Simple_QnA_Chatbot

./: README.md  pyproject.toml
src/simple_qna_chatbot/: __init__.py  chatbot.py  streaming.py
